2007-12-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/include/grcan_spwrtc.h: Removed.

2007-12-05	Daniel Hellstrom <daniel@gaisler.com>

	* shared/include/ambapp.h: Sync head and 4.8 branch.

2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/bspstart.c: Move interrupt_stack_size field from CPU Table to
	Configuration Table. Eliminate CPU Table from all ports. Delete
	references to CPU Table in all forms.

2007-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/bspstart.c: Moved most of the remaining CPU Table fields to
	the Configuration Table. This included pretasking_hook,
	predriver_hook, postdriver_hook, idle_task, do_zero_of_workspace,
	extra_mpci_receive_server_stack, stack_allocate_hook, and
	stack_free_hook. As a side-effect of this effort some multiprocessing
	code was made conditional and some style clean up occurred.

2007-11-30	Daniel Hellstrom <daniel@gaisler.com>

	* shared/include/grspw.h, shared/spw/grspw.c: GRSPW SpaceWire Driver.
	Fixes typecast to volatile integer instead of to integer. Added
	scanning for GRSPW2 Core, The GRSPW2 core is run in legacy mode.

2007-11-30	Daniel Hellstrom <daniel@gaisler.com>

	* shared/can/occan.c: LEON2/3 OCCAN CAN driver. Fixes typecast to
	volatile integer where needed. Fixes bug where closing the driver and
	opening it again could make the driver not starting transmission due
	to the software fifo was not cleared.

2007-11-30	Daniel Hellstrom <daniel@gaisler.com>

	* shared/can/grcan.c, shared/can/grcan_rasta.c,
	shared/include/ambapp.h: GRCAN CAN driver. Fixes Interrupt
	enabling/disabling in the driver, interrupt may not be restored
	correctly. Implements the baud rate calculation routine. Removed
	unnecessary printk. Fixed scanning to support GRCAN and GRHCAN
	hardware. Added GRCAN device number to ambapp.h.

2007-10-11	Daniel Hellstrom <daniel@gaisler.com>

	* Makefile.am, shared/can/occan.c, shared/include/ambapp.h: Add initial
	i2c and update OC-CAN support.