@@ -32,14 +32,6 @@
 #include <rtems/bspIo.h>
 
 /*
- *  The original table from the application and our copy of it with
- *  some changes.
- */
-
-extern rtems_configuration_table  Configuration;
-rtems_configuration_table         BSP_Configuration;
-
-/*
  *  Tells us where to put the workspace in case remote debugger is present.
  */
 
@@ -95,7 +87,7 @@ void bsp_pretasking_hook(void)
   if (heap_start & (CPU_ALIGNMENT-1))
     heap_start = (heap_start + CPU_ALIGNMENT) & ~(CPU_ALIGNMENT-1);
 
-  heap_size = BSP_Configuration.work_space_start - (void *)&end - STACK_SIZE;
+  heap_size = Configuration.work_space_start - (void *)&end - STACK_SIZE;
   heap_size &= 0xfffffff0;  /* keep it as a multiple of 16 bytes */
 
   bsp_libc_init((void *) heap_start, heap_size, 0);
@@ -118,14 +110,14 @@ void bsp_start( void )
   unsigned char *work_space_start;
 
   work_space_start =
-    (unsigned char *)rdb_start - BSP_Configuration.work_space_size;
+    (unsigned char *)rdb_start - rtems_configuration_get_work_space_size();
 
   if ( work_space_start <= (unsigned char *)&end ) {
     printk( "bspstart: Not enough RAM!!!\n" );
     BSP_fatal_return();
   }
 
-  BSP_Configuration.work_space_start = work_space_start;
+  Configuration.work_space_start = work_space_start;
   
   #ifdef LEON2
   CPU_SPARC_HAS_SNOOPING = set_snooping();
