@@ -1,3 +1,8 @@
+2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* shared/bspstart.c: Eliminate copies of the Configuration Table. Use
+	the RTEMS provided accessor macros to obtain configuration fields.
+
 2007-12-06	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* shared/include/grcan_spwrtc.h: Removed.
